2013-01-12  Esa Peuha  <esa.peuha@gmail.com>

	* lib/stack.c (stack_move_cards): Change parameters.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/freecell.c, games/solitaire.c,
	  games/thornq.c, tests/test4.c: Update.
	* lib/stack.c (stack_drop): Add parameter.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/canfield.c, games/freecell.c, games/solitaire.c,
	  games/spider.c, games/thornq.c, tests/test5.c: Update.
	* lib/stack.c (stack_animate): Add parameter.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/canfield.c, games/freecell.c, games/solitaire.c,
	  games/spider.c, games/thornq.c: Update.

2013-01-11  Esa Peuha  <esa.peuha@gmail.com>

	* lib/stack.c (stack_flip_stack): Reimplement.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/canfield.c, games/freecell.c, games/golf.c,
	  games/solitaire.c, games/spider.c, games/thornq.c: Update.
	* lib/stack.c (stack_flip_card): Reimplement.
	* lib/cards.h: Change declaration.
	* docs/toolkit.html: Document it.
	* games/canfield.c, games/freecell.c, games/golf.c,
	  games/solitaire.c, games/spider.c, games/thornq.c: Update.

2013-01-06  Esa Peuha  <esa.peuha@gmail.com>

	* lib/stack.c (stack_flip_cards): New function.
	* lib/cards.h: Declare it.
	* docs/toolkit.html: Document it.
	* lib/stack.c (stack_move_card): New function.
	* lib/cards.h: Declare it.
	* docs/toolkit.html: Document it.
	* games/solitaire.c, games/spider.c, games/thornq.c: Use it.

2013-01-03  Esa Peuha  <esa.peuha@gmail.com>

	* games/spider.c (key): Call clear_arrows before stack_undo.
	* lib/make-imglib.c (main): Print file name instead of null file
	pointer if fopen fails.

2012-03-24  DJ Delorie  <dj@delorie.com>

	* configure.in : ACE 1.4 release
	* configure: regenerated.

2012-03-24  Jari Aalto <jari.aalto@cante.net>

	* Debian mega-patch

2008-04-19  Eric Bachalo  <ebachalo@redhat.com>
